SAK-23907 removing the commons assemblies
git-svn-id: https://source.sakaiproject.org/svn/common/trunk@129489 66ffb92e-73f9-0310-93c1-f5514f145a0a