@@ -1,203 +1,177 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.sakaiproject</groupId>
+    <artifactId>master</artifactId>
+    <version>2.10-SNAPSHOT</version>
+    <relativePath>../master/pom.xml</relativePath>
+  </parent>
 
-    <parent>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>master</artifactId>
-        <version>2.10-SNAPSHOT</version>
-		<relativePath>../master/pom.xml</relativePath>
-    </parent>
+  <name>Sakai Common Project</name>
+  <groupId>org.sakaiproject.common</groupId>
+  <version>1.3-SNAPSHOT</version>
+  <artifactId>common</artifactId>
+  <packaging>pom</packaging>
 
-    <name>Sakai Common Project</name>
-    <groupId>org.sakaiproject.common</groupId>
-    <version>1.3-SNAPSHOT</version>
-    <artifactId>common</artifactId>
-    <packaging>pom</packaging>
+  <modules>
+    <module>pack</module>
+    <module>common-composite-component</module>
+    <module>impl</module>
+    <module>edu-person-api</module>
+    <module>manager-api</module>
+    <module>type-api</module>
+    <module>privacy-api</module>
+    <module>privacy-comp-impl</module>
+    <module>privacy-components</module>
+    <module>privacy-hbm</module>
+    <module>privacy-integration-test</module>
+    <!-- archive and import -->
+    <module>archive-api</module>
+    <module>archive-impl/impl2</module>
+    <module>archive-impl/impl</module>
+    <module>archive-impl/pack</module>
+    <module>import-impl</module>
+    <module>import-handlers/content-handlers</module>
+    <module>import-pack</module>
+    <module>import-util</module>
+    <module>import-parsers/common-cartridge</module>
+    <module>import-parsers/sakai-archive</module>
+  </modules>
 
-    <scm>
-        <connection>scm:svn:https://source.sakaiproject.org/svn/common/trunk</connection>
-        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/common/trunk</developerConnection>
-        <url>https://source.sakaiproject.org/svn/common/trunk</url>
-    </scm>
+  <scm>
+    <connection>scm:svn:https://source.sakaiproject.org/svn/common/trunk</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/common/trunk</developerConnection>
+    <url>https://source.sakaiproject.org/svn/common/trunk</url>
+  </scm>
 
-    <modules>
-        <module>pack</module>
-        <module>common-composite-component</module>
-        <module>impl</module>
-        <module>edu-person-api</module>
-        <module>manager-api</module>
-        <module>type-api</module>
-        <module>common-assembly</module>
-        <module>privacy-api</module>
-        <module>privacy-comp-impl</module>
-        <module>privacy-components</module>
-        <module>privacy-hbm</module>
-        <module>privacy-integration-test</module>
-        <!-- archive and import -->
-        <module>archive-api</module>
-        <module>archive-impl/impl2</module>
-        <module>archive-impl/impl</module>
-        <module>archive-impl/pack</module>
-        <module>import-impl</module>
-        <module>archive-assembly</module>
-        <module>import-handlers/content-handlers</module>
-        <module>import-pack</module>
-	<module>import-util</module>
-        <module>import-parsers/common-cartridge</module>
-        <module>import-parsers/sakai-archive</module>
+  <distributionManagement>
+    <site>
+      <id>sakai-site</id>
+      <name>Sakai release Site</name>
+      <url>scpexe://source.sakaiproject.org/var/www/html/release/common/${project.version}</url>
+    </site>
+  </distributionManagement>
 
-    </modules>
-	
-    <distributionManagement>
-        <site>
-            <id>sakai-site</id>
-            <name>Sakai release Site</name>
-            <url>scpexe://source.sakaiproject.org/var/www/html/release/common/${project.version}</url>
-        </site>
-    </distributionManagement>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-common-composite-component</artifactId>
+        <version>1.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-common-manager-api</artifactId>
+        <version>1.3-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-common-type-api</artifactId>
+        <version>1.3-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-common-edu-person-api</artifactId>
+        <version>1.3-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-common-composite-component-data</artifactId>
+        <version>1.3-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-privacy-hbm</artifactId>
+        <version>1.3-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-privacy-api</artifactId>
+        <version>1.3-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-privacy-impl</artifactId>
+        <version>1.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>archive-api</artifactId>
+        <version>1.3-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>archive-impl2</artifactId>
+        <version>1.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>archive-impl</artifactId>
+        <version>1.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>import-impl</artifactId>
+        <version>1.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-import-content</artifactId>
+        <version>1.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>common-cartridge</artifactId>
+        <version>1.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.common</groupId>
+        <artifactId>sakai-archive-import</artifactId>
+        <version>1.3-SNAPSHOT</version>
+      </dependency>
+      <!-- external dependencies -->
+      <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+        <version>1.7.0</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-common-composite-component</artifactId>
-                <version>1.3-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-common-manager-api</artifactId>
-                <version>1.3-SNAPSHOT</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-common-type-api</artifactId>
-                <version>1.3-SNAPSHOT</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-common-edu-person-api</artifactId>
-                <version>1.3-SNAPSHOT</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-common-composite-component-data</artifactId>
-                <version>1.3-SNAPSHOT</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-privacy-hbm</artifactId>
-                <version>1.3-SNAPSHOT</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-privacy-api</artifactId>
-                <version>1.3-SNAPSHOT</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-privacy-impl</artifactId>
-                <version>1.3-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>archive-api</artifactId>
-                <version>1.3-SNAPSHOT</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>archive-impl2</artifactId>
-                <version>1.3-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>archive-impl</artifactId>
-                <version>1.3-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>import-impl</artifactId>
-                <version>1.3-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-import-content</artifactId>
-                <version>1.3-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>common-cartridge</artifactId>
-                <version>1.3-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-archive-import</artifactId>
-                <version>1.3-SNAPSHOT</version>
-            </dependency>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <debug>true</debug>
+          <links>
+            <link>http://download.oracle.com/javase/6/docs/api/</link>
+          </links>
+          <breakiterator>true</breakiterator>
+          <verbose>false</verbose>
+          <aggregate>true</aggregate>
+          <minmemory>168m</minmemory>
+          <maxmemory>1024m</maxmemory>
+          <additionalJOption>-J-Xmx1024m -J-XX:MaxPermSize=128m</additionalJOption>
+          <!-- SAK-20961 exclude commented out test classes -->
+          <excludePackageNames>org.sakaiproject.api.common.edu.person:org.sakaiproject.api.common.type</excludePackageNames>
+        </configuration>
+      </plugin>
+      <plugin>
+        <inherited>true</inherited>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.11</version>
+      </plugin>
+    </plugins>
+  </reporting>
 
-            <!-- external dependencies -->
-            <dependency>
-                <groupId>commons-beanutils</groupId>
-                <artifactId>commons-beanutils</artifactId>
-                <version>1.7.0</version>
-            </dependency>
-            <!--
-                defined by master <dependency>
-                <groupId>commons-logging</groupId>
-                <artifactId>commons-logging</artifactId>
-                <version>${sakai.commons-logging.version}</version> </dependency>
-            -->
-        </dependencies>
-    </dependencyManagement>
-    
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <debug>true</debug>
-                    <links>
-                        <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
-                        <link>http://download.oracle.com/javase/6/docs/api/</link>
-                    </links>
-                    <breakiterator>true</breakiterator>
-                    <verbose>false</verbose>
-                    <aggregate>true</aggregate>  
-                    <minmemory>168m</minmemory>
-                    <maxmemory>1024m</maxmemory>
-                    <additionalJOption>-J-Xms168m -J-Xmx1024m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
-                    <!-- SAK-20961 exclude commented out test classes --> 
-                    <excludePackageNames>org.sakaiproject.api.common.edu.person:org.sakaiproject.api.common.type</excludePackageNames>
-                </configuration>
-            </plugin>
-            <plugin>
-                <inherited>true</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.11</version>
-            </plugin>
-        </plugins>
-    </reporting>
-    
-    <repositories> 
-		<repository> 
-			<id>sonatype-nexus-snapshots</id> 
-			<name>Sonatype Nexus Snapshots</name> 
-			<url> https://oss.sonatype.org/content/repositories/snapshots </url> 
-			<releases> 
-				<enabled>false</enabled> 
-			</releases> 
-			<snapshots> 
-				<enabled>true</enabled> 
-			</snapshots> 
-		</repository> 
-	</repositories>
-   
 </project>
